# openvx_sample

./: Android.mk  BUILD_DEFINES  Build.py  CMakeLists.txt  LICENSE  Makefile  README  openvx_sample_macos.diff
cmake_utils/: CMakeFuncs.txt  CMake_android_tools.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake
concerto/: combo.mak  combo_filters.mak  definitions.mak  finale.mak  machine.mak  os.mak  platform.mak  prelude.mak  rules.mak  scm.mak  shell.mak  target.mak
concerto/compilers/: cl.mak  clang.mak  gcc.mak  java.mak  rvct.mak
concerto/components/: opencl.mak  openmp.mak
concerto/os/: posix.mak  windows.mak
concerto/tools/: doxygen.mak  dpkg.mak  latex.mak  tar.mak
debug/: Android.mk  CMakeLists.txt  concerto.mak  vx_debug.c  vx_debug.h
examples/: Android.mk  CMakeLists.txt  concerto.mak  vx_arrayrange.c  vx_callback.c  vx_convolution.c  vx_delaygraph.c  vx_examples.h  vx_extensions.c  vx_eyetrack.c  vx_factory_corners.c  vx_factory_edge.c  vx_factory_pipeline.c  vx_graph_factory.c  vx_graph_factory.h  vx_imagepatch.c  vx_independent.c  vx_introspection.c  vx_kernels.c  vx_matrix_access.c  vx_multi_node_graph.c  vx_parameters.c  vx_single_node_graph.c  vx_super_res.c  vx_tiling_add.c  vx_tiling_alpha.c  vx_tiling_box.c  vx_tiling_ext.c  vx_tiling_ext.h  vx_tiling_gaussian.c  vx_tiling_main.c  vx_warps.c  vx_xyz_lib.c  vx_xyz_module.c  xyz.def
helper/: Android.mk  CMakeLists.txt  concerto.mak  vx_helper.c
include/: CMakeLists.txt
include/VX/: vx.h  vx_api.h  vx_ext_target.h  vx_helper.h  vx_kernels.h  vx_khr_dot.h  vx_khr_interp.h  vx_khr_node_memory.h  vx_khr_opencl.h  vx_khr_tiling.h  vx_khr_variants.h  vx_khr_xml.h  vx_lib_debug.h  vx_lib_extras.h  vx_lib_xyz.h  vx_nodes.h  vx_types.h  vx_vendors.h  vxu.h
include/windows/: stdint.h
kernels/: CMakeLists.txt  README
kernels/c_model/: Android.mk  CMakeLists.txt  c_absdiff.c  c_accumulate.c  c_addsub.c  c_bitwise.c  c_channel.c  c_conv3x3.c  c_convertcolor.c  c_convertdepth.c  c_convolve.c  c_fast9.c  c_filter.c  c_histogram.c  c_integralimage.c  c_lut.c  c_magnitude.c  c_model.h  c_morphology.c  c_multiply.c  c_optpyrlk.c  c_phase.c  c_scale.c  c_sobel3x3.c  c_statistics.c  c_threshold.c  c_warp.c  concerto.mak  template
kernels/debug/: Android.mk  CMakeLists.txt  concerto.mak  d_copy.c  d_file.c  debug_k.h
kernels/extras/: CMakeLists.txt  concerto.mak  e_filter.c  e_nonmax.c  extras_k.h
kernels/opencl/: vx_and.cl  vx_box3x3.cl  vx_cl.h  vx_error.cl  vx_gaussian3x3.cl  vx_histogram.cl  vx_lut.cl  vx_math.cl  vx_not.cl  vx_orr.cl  vx_sobel3x3.cl  vx_threshold.cl  vx_xor.cl
libraries/: CMakeLists.txt
libraries/debug/: Android.mk  CMakeLists.txt  concerto.mak  openvx-debug.def  vx_check.c  vx_compare.c  vx_copy.c  vx_debug_lib.c  vx_debug_module.c  vx_debug_module.h  vx_file.c  vx_fill.c
libraries/extras/: Android.mk  CMakeLists.txt  concerto.mak  openvx-extras.def  vx_edge_trace.c  vx_extras_lib.c  vx_extras_module.c  vx_extras_module.h  vx_filter.c  vx_gradients.c  vx_harris_score.c  vx_listers.c  vx_nonmax.c  vx_norm.c
raw/: test.xml
sample/: Android.mk  CMakeLists.txt
sample/application/: Android.mk
sample/application/res/layout/: skeleton_activity.xml
sample/application/res/layout-land/: skeleton_activity.xml
sample/application/res/values/: colors.xml  strings.xml
sample/bindings/: Android.mk
sample/bindings/java/: Android.mk
sample/bindings/java/jni/: Android.mk  Buffer.cpp  Context.cpp  Graph.cpp  Image.cpp  Kernel.cpp  Node.cpp  Parameter.cpp  Reference.cpp  Scalar.cpp  Target.cpp  openvx_jni.cpp  openvx_jni.h
sample/bindings/ruby/: History.txt  Manifest.txt  README.txt  Rakefile
sample/bindings/ruby/ext/openvx/: extconf.rb  openvx.c  openvx.h  rubyext.c  rubyext.h
sample/bindings/ruby/lib/: openvx.rb
sample/bindings/ruby/test/: vx_test.rb
sample/framework/: Android.mk  CMakeLists.txt  concerto.mak  openvx.def  vx_array.c  vx_context.c  vx_convolution.c  vx_delay.c  vx_distribution.c  vx_dot.c  vx_error.c  vx_graph.c  vx_image.c  vx_import.c  vx_kernel.c  vx_log.c  vx_lut.c  vx_matrix.c  vx_memory.c  vx_meta_format.c  vx_node.c  vx_node_api.c  vx_osal.c  vx_parameter.c  vx_pyramid.c  vx_reference.c  vx_remap.c  vx_scalar.c  vx_target.c  vx_threshold.c  vx_type_pairs.c  vx_xml_export.c  vx_xml_import.c
sample/include/: vx_array.h  vx_context.h  vx_convolution.h  vx_delay.h  vx_distribution.h  vx_error.h  vx_graph.h  vx_image.h  vx_import.h  vx_inlines.c  vx_internal.h  vx_kernel.h  vx_log.h  vx_lut.h  vx_matrix.h  vx_memory.h  vx_meta_format.h  vx_node.h  vx_osal.h  vx_parameter.h  vx_pyramid.h  vx_reference.h  vx_remap.h  vx_sample.h  vx_scalar.h  vx_target.h  vx_threshold.h  vx_type_pairs.h
sample/package/: concerto.mak
sample/targets/: CMakeLists.txt
sample/targets/c_model/: Android.mk  CMakeLists.txt  concerto.mak  openvx-target.def  vx_absdiff.c  vx_accumulate.c  vx_addsub.c  vx_bitwise.c  vx_canny.c  vx_channelcombine.c  vx_channelextract.c  vx_colorconvert.c  vx_convertdepth.c  vx_convolution.c  vx_fast9.c  vx_filter.c  vx_gradients.c  vx_harris.c  vx_histogram.c  vx_integralimage.c  vx_interface.c  vx_interface.h  vx_lut.c  vx_magnitude.c  vx_meanstddev.c  vx_minmaxloc.c  vx_morphology.c  vx_multiply.c  vx_optpyrlk.c  vx_phase.c  vx_pyramid.c  vx_remap.c  vx_scale.c  vx_threshold.c  vx_warp.c
sample/targets/opencl/: CMakeLists.txt  concerto.mak  openvx-target.def  vx_bitwise.c  vx_filter.c  vx_histogram.c  vx_interface.c  vx_interface.h  vx_lut.c  vx_support.c  vx_support.h
sample/targets/openmp/: CMakeLists.txt  concerto.mak  openvx-target.def  vx_interface.c  vx_interface.h  vx_lut.c
sample/tests/: Android.mk  CMakeLists.txt  concerto.mak  vx_cam_test.c  vx_test.c
sample/vxu/: Android.mk  CMakeLists.txt  concerto.mak  vx_utility.c
tools/: CMakeLists.txt
tools/gredit/: gredit.py  vxCodeWriter.py  vxGraph.py  vxKernel.py  vxNodeUtils.py  vxNodes.py  vxWriteNodeHeaders.py  vxXML2C.py  vx_header.h
tools/pgm2hdr/: CMakeLists.txt  concerto.mak  pgm2hdr.c
tools/query/: Android.mk  CMakeLists.txt  concerto.mak  vx_query.c
(+14 files in other folders)
